# oellm-autoexp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MONITORING_RESTART.md  README.md  SPEC.md  TESTING.md  TITAN_README.md  analysis.ipynb  base_environment.yaml  core.jpbl-s01-04.2460936  export_megatron_runs_to_hf.sh  fix_cancelled_sessions.py  oellm_env.sh  pyproject.toml  requirements_megatron_frozen.txt  run_0.7B_115M_ablations.sh  run_config.sh  run_monitoring.sh  set_env.sh  slurm_juwels.sh  submit.job  tables_percentages.tex  testrun_lumi.sh  update_backend.sh  use_env.sh
.github/: flake8.yml  interrogate.yml  pylint.yml  pytest.yml  sphinx.yml
config/: autoexp.yaml
container/: README.md  build_container.sh  build_container_user.py  conda_env_from_frozen_reqs.py  gen_constraints.py  gen_constraints_from_pip_freeze.py  requirements_base.txt
docs/: RESUME_AND_MONITOR_GUIDE.md  advanced_features.md  bridge_eval_setup.md  cooldown_config_solution.md  escaped_interpolation_design.md  log_symlink_usage.md  lr_gbsz_tokens_grid_sweep.md  moe_metrics.md  monitoring_and_restart.md  multi_stage_design.md  nested_monitoring_solution.md  plan.md  plan_config_titan.md  provenance_fix_summary.md  sweep_resolution_architecture.md  sweep_resolution_ordering.md  testing_auto_restart.md  tier_based_scheduling.md
helper_scripts/: apply_megatron_numpy_product_patch.sh  clean.sh  run.sh  run_lumi.sh  set_env.sh
local/: 6040_datapath.txt  6040_datapath_short.txt  compute_gpuh.py  downsample.slurm  downsample_indexed_dataset.py  downsample_loop.sh  merge_indexed_datasets_streaming.py  plotting.py  preprocess_data_with_hf_tokenizer.py
oellm_autoexp/: __init__.py  _libs.py  cli.py  orchestrator.py  titan_custom_config.py  titan_custom_train_spec.py  titan_overrides.py
output/: juwels-array.sbatch  juwels.sbatch  megatron_auto_restart_example-array.sbatch  megatron_auto_restart_example.sbatch  sweep.json
patches/: deepep_megatron.patch  deepep_titan.patch  deepep_torchtitan.patch  maxtext_gpu_multinode.patch
scripts/: automated_resume_timed_out.py  bench_primus_grouped_gemm.py  build_deepep_jupiter4gpu.sh  gpu_hours.py  (+39 more)
(+1100 files in other folders)
