[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "oellm-autoexp"
version = "0.1.1"
description = "Unified orchestration for OELLM training sweeps and monitoring."
readme = "README.md"
authors = [
  { name = "OpenEuroLLM" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "compoconf>=0.1.11",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "pydantic>=2.0",
  "jsonschema>=4.17",
]

[project.optional-dependencies]
megatron = [
  "torch",
  "transformers",
  "six"
]

dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "pytest-mock>=3.10",
  "pytest-cov>=4.1",
  "ruff>=0.1",
  "mypy>=1.7",
  "pre-commit>=3.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["oellm_autoexp"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["submodules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=oellm_autoexp --cov-report=term-missing -q"
